Changes for 1.9

 - [DEV-444] added optional suppressing of processing of older data in log[], logrt[] and eventlog[] (Sasha)

Changes for 1.8.1

 - [ZBX-1742] fixed processing of "system.uptime" check under Windows to return values as integers (Dmitry)
 - [ZBX-1786] fixed not remembered group when use paging in export screen (Vedmak)
 - [ZBX-1735] added "ERROR" words to some error messages in data cache module (Dmitry)
 - [ZBX-1321] fixed displaying of large unsigned int values in latest data (Vedmak)
 - [ZBX-1838] fixed value mapping in overview screen (Aly)
 - [ZBX-1788] fixed proxy configuration form showing hosts from all nodes (Vedmak)
 - [ZBX-954] fix typo in default trigger names (Richlv)
 - [ZBX-1746] fixed problems viewing map element (Aly)
 - [ZBX-1763] applied patch with translation for some javascript strings (Aly)
 - [DEV-447,DEV-448] added support of net.if.* under Windows (Sasha)
 - [ZBX-1582] fixed processing ssh.run[...] check to avoid the server crashing on libssh2 timeout (Dmitry)
 - [ZBX-1688] hosts, user doesn't have permission to, are shown gray in hostgroup configuration screen (Vedmak)
 - [ZBX-1608] fixed notifications after maintenance periods (Sasha)
 - [ZBX-1576] fixed evaluating aggregate items for large host groups (Sasha)
 - [ZBX-1822] added option to expand single problem for hosts,maps,host groups (Aly)
 - [DEV-360] added support of calculated items (Sasha)
 - [ZBX-1821] fixed map problem if icon element is not selected (Aly)
 - [ZBX-1177] returned slide-level refresh rate (Aly)
 - [ZBX-1331] implemented auto adding selected group on host creation (Aly)
 - [ZBX-1427] fixed adding Actions through API (Aly)
 - [ZBX-1810] fixed adding user media through API (Aly)
 - [ZBX-1818] fixed API inner inconsistency in method naming (Aly)
 - [ZBX-1818] changed API version (Aly)
 - [ZBX-3] remove a comment saying syslog is used until it works from proxy config file as well (Richlv)
 - [ZBX-1801] fixed action disable link (Vedmak)