@@ -4,6 +4,7 @@ Changes for 1.9
 
 Changes for 1.8.1
 
+ - [ZBX-1840] fixed bad performance of the node synchronization - fixed database index (Sasha)
  - [ZBX-1742] fixed processing of "system.uptime" check under Windows to return values as integers (Dmitry)
  - [ZBX-1786] fixed not remembered group when use paging in export screen (Vedmak)
  - [ZBX-1735] added "ERROR" words to some error messages in data cache module (Dmitry)
